SUPP-502 # renaming after talk with Alex

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
       "src/registration.php"
     ],
     "psr-4": {
-      "Praxigento\\Mage2theme\\": "src/"
+      "Praxigento\\Mage2Theme\\": "src/"
     }
   }
 }
