--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,8 @@
   "description": "Praxigeto theme for Magento 2",
   "require": {
         "php": "~5.5.0|~5.6.0|~7.0.0",
-        "magento/theme-frontend-blank": "dev-master",
-        "magento/framework": "dev-master"
+        "magento/theme-frontend-blank": "100.0.*",
+        "magento/framework": "100.0.*"
    },
   "type": "magento2-theme",
   "homepage": "https://github.com/praxigento/mobi_mage2_theme",
