--- a/composer.json
+++ b/composer.json
@@ -2,9 +2,7 @@
   "name": "praxigento/mobi_mage2_theme",
   "description": "Praxigeto theme for Magento 2",
   "require": {
-        "php": "~5.5.0|~5.6.0|~7.0.0",
-        "magento/theme-frontend-blank": "100.0.*",
-        "magento/framework": "100.0.*"
+        "php": "~5.5.0|~5.6.0|~7.0.0"
    },
   "type": "magento2-theme",
   "homepage": "https://github.com/praxigento/mobi_mage2_theme",
