MOBI-1217 # Add theme module to Santegra project

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
       "registration.php"
     ],
     "psr-4": {
-      "Praxigento\\Mage2Theme\\": ""
+      "Praxigento\\ThemeBase\\": ""
     }
   }
 }
